Set container width to 100% on large screens and added navbar-fixed-top class to the navbar so that z-index is applied with Bootstrap 3.0.1

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -57,14 +57,10 @@ body {
 
 .container {
   height: 100%;
+  width: 100%;
   max-width: 100%;
   padding-left: 0;
   padding-right: 0;
-}
-
-.navbar {
-  position: absolute;
-  width: 100%;
 }
 
 .navbar-brand {
